Remove config.ini; Add channels to config template

--- a/config.ini.tmpl
+++ b/config.ini.tmpl
@@ -1,4 +1,5 @@
 [sithmail]
+channels={{ key "bots/sithmail/channels" }}
 username={{ key "bots/sithmail/nick" }}
 password={{ keyOrDefault "bots/sithmail/password" "" }}
 host={{ key "bots/sithmail/host" }}
